--- a/NewsLetter/main/templates/main/components/primary_column.html
+++ b/NewsLetter/main/templates/main/components/primary_column.html
@@ -1,6 +1,11 @@
 {% load static %}
+{% load pages %}
 {% block primary_column %}
 	<div id="primary-column" class="d-flex border-end border-0 h-100">
-		<p>Main</p>
+		{% if page == 'main' %}
+			{% main %}
+		{% elif page == 'cabinet' %}
+			{% cabinet %}
+		{% endif %}
 	</div>
 {% endblock %}
