--- a/NewsLetter/main/templates/main/index.html
+++ b/NewsLetter/main/templates/main/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 		{% header %}
 		<main class="d-flex position-relative flex-row">
-			{% primary_column %}
+			{% primary_column page %}
 			{% sidebar_column %}
 		</main>
 {% endblock %}
