--- a/NewsLetter/main/static/main/css/styles.css
+++ b/NewsLetter/main/static/main/css/styles.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-width: 600px;
+    --sidebar-width: 250px;
+}
+
 
 body {
   background-color: black;
@@ -26,9 +31,33 @@ main {
 }
 
 #primary-column {
-  width: 600px;
+  width: var(--primary-width);
 }
 
 #sidebar-column {
-  width: 250px;
+  width: var(--sidebar-width);
+
+}
+
+.overlay-blur {
+  margin: 0;
+
+  background: black;
+  background: rgba(0, 0, 0, 0.3);
+
+  backdrop-filter: blur(1.5em);
+}
+
+.page-name {
+  width: var(--primary-width);
+  padding: 0.3rem 3rem;
+  font-weight: 600;
+  font-size: 1.5rem;
+  height: 3rem;
+}
+
+.avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
 }
