--- a/NewsLetter/main/templates/main/components/header.html
+++ b/NewsLetter/main/templates/main/components/header.html
@@ -2,11 +2,12 @@
 {% block header %}
 	<header class="d-flex border-end border-0 h-100 position-fixed flex-column justify-content-between">
 		<nav class="d-flex fs-5 text-start flex-column justify-content-start">
-			<a class="py-4 fs-4" href="{% url 'home' %}"><i class="fa-solid fa-newspaper"></i> NewsLetter</a>
-			<a class="pb-4" href="{% url 'home' %}"><i class="fa-solid fa-house"></i> Главная</a>
+			<a class="py-4 fs-4" href="?page=main"><i class="fa-solid fa-newspaper"></i> NewsLetter</a>
+			<a class="pb-4" href="?page=main"><i class="fa-solid fa-house"></i> Главная</a>
+			<a class="pb-4" href="admin"><i class="fa-solid fa-screwdriver-wrench"></i> Админ панель</a>
 		</nav>
 		<nav class="d-flex fs-5 text-start flex-column justify-content-start">
-			<a class="pb-4" href="admin"><i class="fa-solid fa-screwdriver-wrench"></i> Админ панель</a>
+			<a class="pb-4" href="?page=cabinet"><i class="fa-solid fa-house"></i> Кабинет</a>
 		</nav>
 	</header>
 {% endblock %}
