--- a/NewsLetter/main/templates/main/components/news_block.html
+++ b/NewsLetter/main/templates/main/components/news_block.html
@@ -1,17 +1,50 @@
 {% load static %}
 {% block news_block %}
-	<div class="d-flex p-3 flex-row border-bottom border-0 w-100">
-		<div>
-			<img class="avatar mx-1" src="{% static 'img' %}/default_image.jpg" alt="">
-		</div>
-		<div class="d-flex flex-column justify-content-start w-100">
-			<div class="d-flex fw-bold mx-1">
-				Author
+	<div id="1" class="d-flex p-3 flex-row border-bottom border-0 w-100">
+		<a href="?page=cabinet&name=author">
+			<img class="nl-avatar-small mx-1" src="{% static 'img' %}/default_image.jpg" alt="">
+		</a>
+		<div class="d-flex flex-column justify-content-start mx-1 w-100">
+			<div class="d-flex flex-row justify-content-between">
+				<a href="?page=cabinet&name=author" class="d-flex flex-row justify-content-start">
+					<div class="fw-bold">
+						Author
+					</div>
+					<div class="px-2 text-muted">
+						@author
+					</div>
+				</a>
+				<div>
+					<button class="nl-button nl-small-button nl-blue-hover nl-bg-hover"><i class="fa-solid fa-ellipsis"></i></button>
+				</div>
 			</div>
-			<div class="d-flex mx-1">
+			<div class="d-flex">
 				found this png today. can you guess which tutorial this is from? only a true pixel master would know! :>
 			</div>
+			<div class="d-flex pt-2 flex-row justify-content-start">
+				<div class="w-100">
+					<a href="?page=main&like=1#1" class="nl-button nl-red-hover">
+						<i class="fa-solid fa-heart"></i> 0
+					</a>
+				</div>
+				<div class="w-100">
+					<button class="nl-button nl-blue-hover">
+						<i class="fa-solid fa-comments"></i> 0
+					</button>
+				</div>
+				<div class="w-100">
+					<button class="nl-button nl-green-hover">
+						<i class="fa-solid fa-bookmark"></i>
+					</button>
+				</div>
+				<div class="w-100">
+					<button class="nl-button nl-green-hover">
+						<i class="fa-solid fa-share"></i>
+					</button>
+				</div>
+			</div>
 		</div>
+
 
 	</div>
 {% endblock %}
