--- a/NewsLetter/main/templates/main/pages/cabinet.html
+++ b/NewsLetter/main/templates/main/pages/cabinet.html
@@ -1,4 +1,28 @@
 {% load static %}
-{% block main %}
-		<p>Cabinet</p>
+{% block cabinet %}
+	<div class="w-100">
+		<div class="nl-page-name position-fixed d-flex nl-overlay-blur border-bottom border-0">
+			<span>User</span>
+		</div>
+		<div class="d-flex flex-column w-100 border-bottom border-0">
+			<div class="nl-cabinet-head w-100 container border-bottom border-0"></div>
+			<div class="d-flex flex-row justify-content-between">
+				<img class="nl-avatar-big mx-5" src="{% static 'img' %}/default_image.jpg" alt="">
+				<button class="nl-button nl-medium-button py-2 my-4 fs-6 nl-bg-hover">Изменить профиль</button>
+			</div>
+			<div class="ps-5 mb-3">
+				<div class="fw-bold fs-3">
+					User
+				</div>
+				<div class="text-muted fs-5 mb-3">
+					@user
+				</div>
+				<div class="fs-5 mb-3">
+					Description
+				</div>
+			</div>
+
+
+		</div>
+	</div>
 {% endblock %}
