--- a/NewsLetter/main/templates/main/pages/main.html
+++ b/NewsLetter/main/templates/main/pages/main.html
@@ -2,10 +2,10 @@
 {% load components %}
 {% block main %}
 	<div>
-		<div class="page-name position-fixed d-flex overlay-blur border-bottom border-0">
+		<div class="nl-page-name position-fixed d-flex nl-overlay-blur border-bottom border-0">
 			<span>Главная</span>
 		</div>
-		<div class="d-flex flex-column w-100">
+		<div class="d-flex mt-5 flex-column w-100">
 			{% news_block %}
 			{% news_block %}
 			{% news_block %}
