--- a/NewsLetter/main/templates/main/base.html
+++ b/NewsLetter/main/templates/main/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-
+{% load components %}
 
 <html lang="ru">
 	<head>
@@ -16,7 +16,12 @@
 	</head>
 	<body>
 		<div class="d-flex px-5 mx-5">
-			{% block content %}{% endblock %}
+			{% header request %}
+			<main class="d-flex position-relative flex-row">
+				{% block content %}{% endblock %}
+				{% sidebar_column request %}
+			</main>
+
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
