--- a/NewsLetter/main/templates/main/components/header.html
+++ b/NewsLetter/main/templates/main/components/header.html
@@ -2,23 +2,41 @@
 {% block header %}
 	<header class="d-flex border-end border-0 h-100 position-fixed flex-column justify-content-between">
 		<nav class="d-flex fs-5 text-start flex-column justify-content-start">
-			<a class="nl-button nl-medium-button nl-blue-hover py-4 fs-4 " href="?page=main"><i class="fa-solid fa-newspaper"></i> NewsLetter</a>
-			<a class="nl-button nl-medium-button nl-bg-hover" href="?page=main"><i class="fa-solid fa-house"></i> Главная</a>
-			<a class="nl-button nl-medium-button nl-bg-hover" href="?page=favorite"><i class="fa-solid fa-bookmark"></i> Избранное</a>
-			<a class="nl-button nl-medium-button nl-bg-hover" href="admin"><i class="fa-solid fa-screwdriver-wrench"></i> Админ панель</a>
-		</nav>
-		<nav>
-			<a class="d-flex text-start flex-row justify-content-start pb-4" href="?page=cabinet&name=user">
-				<img class="nl-avatar-small mx-1" src="{% static 'img' %}/default_image.jpg" alt="">
-				<div class="px-1 d-flex flex-column justify-content-start">
-					<div class="fs-5">
-						User
-					</div>
-					<div class="text-muted">
-						@user
-					</div>
-				</div>
+			<a class="nl-button nl-medium-button nl-blue-hover py-4 fs-4 "
+				 href="{% url 'main' %}"><i class="fa-solid fa-newspaper"></i> NewsLetter
 			</a>
+			<a class="nl-button nl-medium-button nl-bg-hover"
+				 href="{% url 'main' %}"><i class="fa-solid fa-house"></i> Главная
+			</a>
+			<a class="nl-button nl-medium-button nl-bg-hover"
+				 href="?page=favorite"><i class="fa-solid fa-bookmark"></i> Избранное
+			</a>
+			<a class="nl-button nl-medium-button nl-bg-hover"
+				 href="admin"><i class="fa-solid fa-screwdriver-wrench"></i> Админ панель
+			</a>
+		</nav>
+		<nav class="d-flex flex-column">
+			{% if request.user.is_authenticated %}
+				<a class="d-flex text-start flex-row justify-content-start pb-4"
+					 href="{% url 'cabinet' %}?user_tag={{ request.user.nluser.tag }}">
+					<img class="nl-avatar-small mx-1" src="static{{ request.user.nluser.profile_pic.url }}" alt="">
+					<div class="px-1 d-flex flex-column justify-content-start">
+						<div class="fs-5">
+							{{ request.user.nluser.name }}
+						</div>
+						<div class="text-muted">
+							{{ request.user.nluser.tag }}
+						</div>
+					</div>
+				</a>
+			{% elif not request.user.is_authenticated %}
+				<a class="nl-button nl-medium-button py-2 my-2 fs-6 nl-bg-hover"
+					 href="{% url 'registration' %}">Регистрация
+				</a>
+				<a class="nl-button nl-medium-button py-2 my-2 mb-4 fs-6 nl-bg-hover"
+					 href="{% url 'auth' %}">Вход
+				</a>
+			{% endif %}
 		</nav>
 	</header>
 {% endblock %}
