--- a/NewsLetter/main/templates/main/components/sidebar_column.html
+++ b/NewsLetter/main/templates/main/components/sidebar_column.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% block sidebar_column %}
+{% block sidebar %}
 	<div id="sidebar-column" class="d-flex h-100">
 		<p>Sidebar</p>
 	</div>
