--- a/NewsLetter/main/templates/main/pages/registration.html
+++ b/NewsLetter/main/templates/main/pages/registration.html
@@ -1,32 +1,31 @@
+{% extends 'main/base.html' %}
 {% load static %}
 {% load components %}
-{% block main %}
-	<div>
-		<div class="nl-page-name position-fixed d-flex nl-overlay-blur border-bottom border-0">
-			<span>Главная</span>
-		</div>
-			<div class="d-flex justify-content-center">
-				<form class="form-group row justify-content-center auth-form" method="post">
-					{% csrf_token %}
-					<div class="auth-input p-2">
-						{{ form.username.label }}
-						{{ form.username }}
-					</div>
-					<div class="auth-input p-2">
-						{{ form.email.label }}
-						{{ form.email }}
-					</div>
-					<div class="auth-input p-2">
-						{{ form.password1.label }}
-						{{ form.password1 }}
-					</div>
-					<div class="auth-input p-2">
-						{{ form.password2.label }}
-						{{ form.password2 }}
-					</div>
-
-					<input type="submit" class="btn my-2" name="create_user" value="Регистрация">
-				</form>
+{% block content %}
+	<div class="nl-page-name position-fixed d-flex nl-overlay-blur border-bottom border-0">
+		<span>Регистрация</span>
+	</div>
+	<div id="primary-column" class="d-flex justify-content-center border-end border-0 h-100">
+		<form class="d-flex mt-5 mx-3 flex-column" method="post">
+			{% csrf_token %}
+			<div class="p-2">
+				<div class="text-muted">{{ form.username.label }}</div>
+				{{ form.username }}
 			</div>
+			<div class="p-2">
+				<div class="text-muted">{{ form.email.label }}</div>
+				{{ form.email }}
+			</div>
+			<div class="p-2">
+				<div class="text-muted">{{ form.password1.label }}</div>
+				{{ form.password1 }}
+			</div>
+			<div class="p-2">
+				<div class="text-muted">{{ form.password2.label }}</div>
+				{{ form.password2 }}
+			</div>
+
+			<input type="submit" class="nl-button nl-medium-button fs-5 nl-bg-hover mt-3" name="create_user" value="Регистрация">
+		</form>
 	</div>
 {% endblock %}
