--- a/NewsLetter/main/templates/main/components/news_post.html
+++ b/NewsLetter/main/templates/main/components/news_post.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load math_operations %}
 {% block news_post %}
 	<div id="{{ post.content.id }}" class="d-flex p-3 flex-row border-bottom border-0 w-100">
 		<a href="{% url 'cabinet' %}?user_tag={{ post.author.nluser.tag }}">
@@ -10,19 +11,25 @@
 					<div class="fw-bold">
 						{{ post.author.nluser.name }}
 					</div>
-					<div class="px-2 text-muted">
+					<div class="ps-2 pe-1 text-muted">
 						{{ post.author.nluser.tag }}
+					</div>
+					<div class="text-muted">· {{ post.content.date_created|date:"H:i, d M" }}
 					</div>
 				</a>
 				<div>
-					<button class="nl-button nl-small-button nl-blue-hover nl-bg-hover"><i class="fa-solid fa-ellipsis"></i></button>
+					<button onclick="popupClick({{ post.content.id }})" class="nl-button nl-small-button nl-blue-hover nl-bg-hover">
+						<i class="fa-solid fa-ellipsis"></i>
+					</button>
 				</div>
 			</div>
-			<div class="d-flex flex-column">
-				{{ post.content.text }}
+			<div id="text" class="d-flex flex-column">
+				<div>
+					{{ post.content.text }}
+				</div>
 				{% if post.content.image != '' %}
 					<div class="d-flex justify-content-center">
-						<img class="img-fluid w-75 p-4" src="static/img/{{ post.content.image }}" alt="">
+						<img class="img-fluid w-100 p-4" src="static{{ post.content.image }}" alt="">
 					</div>
 
 				{% endif %}
@@ -40,9 +47,9 @@
 					</button>
 				</div>
 				<div class="w-100">
-					<button class="nl-button nl-green-hover">
+					<a href="{% url 'save_post' %}?save_post={{ post.content.id }}" class="nl-button nl-green-hover">
 						<i class="fa-solid fa-bookmark"></i>
-					</button>
+					</a>
 				</div>
 				<div class="w-100">
 					<button class="nl-button nl-green-hover">
@@ -51,7 +58,6 @@
 				</div>
 			</div>
 		</div>
-
 
 	</div>
 {% endblock %}
